# atuin-graph

./: .gitignore  Dockerfile  README.md  atuin_graph.py  generate_calendar.py  pyproject.toml  requirements.txt  requirements_web.txt  web.py
.github/: dependabot.yml
.github/workflows/: docker.yaml  lint.yaml  release.yaml  ruff.yaml
atuin_graph/: cli.py  generate_calendar.py  web.py
