[project]
name = "atuin-graph"
version = "1.0.1"
description = "activity graph for atuin"
authors = [
    {author = "Matthieu Simon", email = "matthieu@bluegreen.sh"},
]
dependencies = ["blinker~=1.6.2", "calplot~=0.1.7.5", "click~=8.1.3", "contourpy~=1.0.7", "cycler~=0.11.0", "Flask~=2.3.2", "fonttools~=4.39.3", "greenlet~=2.0.2", "itsdangerous~=2.1.2", "Jinja2~=3.1.2", "kiwisolver~=1.4.4", "MarkupSafe~=2.1.2", "matplotlib~=3.7.1", "numpy~=1.24.3", "packaging~=23.1", "pandas~=2.0.1", "Pillow~=9.5.0", "pyparsing~=3.0.9", "python-dateutil~=2.8.2", "pytz~=2023.3", "six~=1.16.0", "SQLAlchemy~=2.0.12", "typing_extensions~=4.5.0", "tzdata~=2023.3", "Werkzeug~=2.3.4", "psycopg2-binary~=2.9.6"]
readme = "README.md"
license = "MIT"
requires-python = ">= 3.11"

[project.scripts]
atuin-graph = "atuin_graph.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["black~=23.3.0", "ruff~=0.0.266"]

[project.urls]
"Homepage" = "https://github.com/tieum/atuin-graph"
"Bug Tracker" = "https://github.com/tieum/atuin-graph/issues"
